Version 0.76

- Array sources included.