@@ -7,6 +7,7 @@
 /addresses
 /data
 /ami
+/newpopw
 cclasses.dat
 consopool
 consopool.cfg
